add loader add not found page

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1,4 +1,5 @@
 {
     "Добро пожаловать": "Добро пожаловать",
-    "Язык": "Русский"
+    "Язык": "Русский",
+    "Страница не найдена": "Страница не найдена"
 }
