--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,4 +1,5 @@
 {
     "Добро пожаловать": "Welcome",
-    "Язык": "English"
+    "Язык": "English",
+    "Страница не найдена": "Page not found"
 }
