add error boundary

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,5 +1,8 @@
 {
     "Добро пожаловать": "Welcome",
     "Язык": "English",
-    "Страница не найдена": "Page not found"
+    "Страница не найдена": "Page not found",
+    "Обновить страницу":"Reload page",
+    "Произошла непредвиденная ошибка":"Uncaught exception",
+    "Генерация ошибки":"Error generator"
 }
