--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1,5 +1,8 @@
 {
     "Добро пожаловать": "Добро пожаловать",
     "Язык": "Русский",
-    "Страница не найдена": "Страница не найдена"
+    "Страница не найдена": "Страница не найдена",
+    "Обновить страницу":"Обновить страницу",
+    "Произошла непредвиденная ошибка":"Произошла непредвиденная ошибка",
+    "Генерация ошибки":"Генерация ошибки"
 }
