--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,6 +1,7 @@
 {
     "Добро пожаловать": "Welcome",
     "Язык": "English",
+    "Короткий язык": "EN",
     "Страница не найдена": "Page not found",
     "Обновить страницу":"Reload page",
     "Произошла непредвиденная ошибка":"Uncaught exception",
