--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1,6 +1,7 @@
 {
     "Добро пожаловать": "Добро пожаловать",
     "Язык": "Русский",
+    "Короткий язык": "RU",
     "Страница не найдена": "Страница не найдена",
     "Обновить страницу":"Обновить страницу",
     "Произошла непредвиденная ошибка":"Произошла непредвиденная ошибка",
